<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.controltcpandroid.MainActivity">

    <TextView
        android:id="@+id/txtVolume"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:text="@string/volume"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mySeekBar" />

    <Button
        android:id="@+id/btnSincronizar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="31dp"
        android:text="@string/sincronizar"
        app:layout_constraintStart_toEndOf="@+id/btnDesligar"
        app:layout_constraintTop_toBottomOf="@+id/txtVolume" />

    <Button
        android:id="@+id/btnMouseView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="31dp"
        android:text="@string/mouse"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtVolume" />

    <Button
        android:id="@+id/btnTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="1dp"
        android:text="@string/timer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnMouseView" />

    <Button
        android:id="@+id/btnDesligar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="31dp"
        android:text="@string/desligar"
        app:layout_constraintStart_toEndOf="@+id/btnMouseView"
        app:layout_constraintTop_toBottomOf="@+id/txtVolume" />

    <TextView
        android:id="@+id/lblInformacoes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="30dp"
        android:text="@string/lblinformacoes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/lblIpAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/ip"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtIp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="47dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/_192_168_0_213"
        app:layout_constraintStart_toEndOf="@+id/lblIpAddress"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints=""
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/lblPorta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="35dp"
        android:text="@string/porta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblIpAddress" />

    <EditText
        android:id="@+id/txtPorta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/_9876"
        app:layout_constraintStart_toEndOf="@+id/lblPorta"
        app:layout_constraintTop_toBottomOf="@+id/txtIp"
        tools:text="9876"
        android:autofillHints=""
        tools:ignore="LabelFor" />

    <SeekBar
        android:id="@+id/mySeekBar"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPorta" />

    <Button
        android:id="@+id/btnSalvar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/salvar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPorta" />

    <Button
        android:id="@+id/btnLoad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:text="@string/load"
        app:layout_constraintStart_toEndOf="@+id/btnSalvar"
        app:layout_constraintTop_toBottomOf="@+id/txtPorta" />

    <Button
        android:id="@+id/btnResetData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:text="@string/resetar"
        app:layout_constraintStart_toEndOf="@+id/btnLoad"
        app:layout_constraintTop_toBottomOf="@+id/txtPorta" />

    <Button
        android:id="@+id/btnLock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="1dp"
        android:text="@string/lock"
        app:layout_constraintStart_toEndOf="@+id/btnTimer"
        app:layout_constraintTop_toBottomOf="@+id/btnDesligar" />


</androidx.constraintlayout.widget.ConstraintLayout>